--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/EggboxSensors/MAC_Identification.h
+/EggboxSensors/__vm/.EggboxSensors.vsarduino.h
